Bug 241938 - [iOS 16] LayoutTests that synthesize touches with keyboard modifiers fail or time out
Summary: [iOS 16] LayoutTests that synthesize touches with keyboard modifiers fail or ...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Tools / Tests (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Wenson Hsieh
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-06-23 15:28 PDT by Wenson Hsieh
Modified: 2022-06-23 21:49 PDT (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wenson Hsieh 2022-06-23 15:28:58 PDT
rdar://95418782
Comment 1 Wenson Hsieh 2022-06-23 16:29:18 PDT
Pull request: https://github.com/WebKit/WebKit/pull/1751
Comment 2 EWS 2022-06-23 21:49:29 PDT
Committed 251820@main (a7456fb062a7): <https://commits.webkit.org/251820@main>

Reviewed commits have been landed. Closing PR #1751 and removing active labels.