[iOS 16] LayoutTests that synthesize touches with keyboard modifiers fail or time out https://bugs.webkit.org/show_bug.cgi?id=241938 rdar://95418782

Reviewed by Tim Horton.

After the refactoring in rdar://90709069, the value of `-[UIGestureRecognizer modifierFlags]` is
derived from `BKSHIDEventDigitizerAttributes` on the inner `IOHIDEventRef`, via the
`-activeModifiers` property; normally, this is populated by logic in BackBoardServices, but in
WebKitTestRunner, nothing sets these flags. As a result, layout tests that attempt to synthesize
touches with modifier keys (with the expectation that resulting `UIEvent` and `UIGestureRecognizer`
state will reflect this modifier state) now fail.

To address these failures, we use BackBoardServices SPI to directly set the value of these modifier
flags before queueing them for event dispatch.

* LayoutTests/fast/events/touch/ios/pointer-events-with-modifiers.html:
* LayoutTests/fast/events/touch/ios/touch-events-with-modifiers.html:

Additionally make these tests `preventDefault()` on "touchstart", to prevent the context menu from
showing up and intercepting subsequent touches, when performing a control-tap.

* Source/WebKit/Platform/spi/ios/BackBoardServicesSPI.h:

Add some SPI declarations; due to the inability to import the headers on internal builds, we
explicitly redeclare these methods when using both internal and non-internal iOS SDKs.

* Tools/WebKitTestRunner/ios/HIDEventGenerator.h:
* Tools/WebKitTestRunner/ios/HIDEventGenerator.mm:
(ActiveModifierState::updateForUsageCode):
(ActiveModifierState::flags const):
(ActiveModifierState::update):

Add a helper class to track modifier state when dispatching synthetic key events. This is owned by
the shared `HIDEventGenerator`, and gets reset between layout tests.

(-[HIDEventGenerator _sendIOHIDKeyboardEvent:usage:isKeyDown:]):
(-[HIDEventGenerator resetActiveModifiers]):
(-[HIDEventGenerator _sendHIDEvent:]):

Set modifier flags on digitizer HID events, using the current `ActiveModifierState`.

* Tools/WebKitTestRunner/ios/TestControllerIOS.mm:
(WTR::TestController::platformResetStateToConsistentValues):

Canonical link: https://commits.webkit.org/251820@main