Source/WebKit/Platform/spi/ios/BackBoardServicesSPI.h
@@ -51,3 +51,22 @@
 @end
 
 #endif // USE(APPLE_INTERNAL_SDK)
+
+// Unfortunately, the following declarations need to be forward declared even when using the internal SDK,
+// since the headers that define these symbols (BKSHIDEventKeyCommand.h and BKSHIDEventAttributes.h) include
+// additional private headers that attempt to define macros, which conflict with other macros within WebKit
+// (in particular, `kB` being defined in BrightnessSystemKeys.h, and Sizes.h in bmalloc).
+
+typedef NS_OPTIONS(NSInteger, BKSKeyModifierFlags) {
+    BKSKeyModifierShift = 1 << 17,
+    BKSKeyModifierControl = 1 << 18,
+    BKSKeyModifierAlternate = 1 << 19,
+    BKSKeyModifierCommand = 1 << 20,
+};
+
+@interface BKSHIDEventBaseAttributes : NSObject
+@end
+
+@interface BKSHIDEventDigitizerAttributes : BKSHIDEventBaseAttributes
+@property (nonatomic) BKSKeyModifierFlags activeModifiers;
+@end
